# test-fixture

./: CMakeLists.txt  tests.cpp  whattotest.cpp  whattotest.h
temp/: CMakeCache.txt  Makefile  cmake_install.cmake  runTests
